--- a/team.html
+++ b/team.html
@@ -161,10 +161,10 @@
 
     <!-- TEAMS -->
     <!-- EXEC TEAM -->
-    <div class="title team-title" id="exec">Executive Team</div>
+    <div class="title team-title" id="exec">Executive Team</div><br>
     <div class="team-container">
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)">;</div>
+            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
             <div class="exec-name">Chris Mohan</div>
             <div class="exec-position">President</div>
             <div class="exec-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor
@@ -174,7 +174,7 @@
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)">;</div>
+            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
             <div class="exec-name">Chris Mohan</div>
             <div class="exec-position">President</div>
             <div class="exec-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor
@@ -182,11 +182,11 @@
                 mauris sagittis nisi, quis gravida elit metus vel sem. Praesent bibendum convallis auctor. Nullam
                 condimentum, tellus at laoreet sodales, ligula massa lacinia dui, vel venenatis mi massa eu mi. Sed eget
                 arcu finibus, viverra massa sed, tincidunt ante. Mauris fringilla, nisl eget iaculis luctus, lorem lacus
-                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna. 
+                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna.
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)">;</div>
+            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
             <div class="exec-name">Chris Mohan</div>
             <div class="exec-position">President</div>
             <div class="exec-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor
@@ -194,11 +194,11 @@
                 mauris sagittis nisi, quis gravida elit metus vel sem. Praesent bibendum convallis auctor. Nullam
                 condimentum, tellus at laoreet sodales, ligula massa lacinia dui, vel venenatis mi massa eu mi. Sed eget
                 arcu finibus, viverra massa sed, tincidunt ante. Mauris fringilla, nisl eget iaculis luctus, lorem lacus
-                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna. 
+                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna.
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)">;</div>
+            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
             <div class="exec-name">Chris Mohan</div>
             <div class="exec-position">President</div>
             <div class="exec-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor
@@ -206,11 +206,11 @@
                 mauris sagittis nisi, quis gravida elit metus vel sem. Praesent bibendum convallis auctor. Nullam
                 condimentum, tellus at laoreet sodales, ligula massa lacinia dui, vel venenatis mi massa eu mi. Sed eget
                 arcu finibus, viverra massa sed, tincidunt ante. Mauris fringilla, nisl eget iaculis luctus, lorem lacus
-                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna. 
+                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna.
             </div>
         </div>
         <div class="exec-card">
-            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)">;</div>
+            <div class="exec-photo" style="background-image: url(./img/shop/jacket2.jpg)"></div>
             <div class="exec-name">Chris Mohan</div>
             <div class="exec-position">President</div>
             <div class="exec-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque auctor
@@ -218,24 +218,154 @@
                 mauris sagittis nisi, quis gravida elit metus vel sem. Praesent bibendum convallis auctor. Nullam
                 condimentum, tellus at laoreet sodales, ligula massa lacinia dui, vel venenatis mi massa eu mi. Sed eget
                 arcu finibus, viverra massa sed, tincidunt ante. Mauris fringilla, nisl eget iaculis luctus, lorem lacus
-                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna. 
+                tempus justo, id facilisis turpis elit ac dolor. Duis eu mollis magna.
             </div>
+        </div>
+    </div>
+    <br>
+
+    <!-- COUNCIL TEAM -->
+    <div class="title team-title" id="council">2021-2022 Council</div><br>
+    <div class="council-container">
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
         </div>
     </div>
 
-    <!-- COUNCIL TEAM -->
-    <div class="title team-title" id="council">2021-2022 Council</div>
+    <!-- YEAR REPS -->
+    <div class="title team-title" id="council">Year Reps</div><br>
     <div class="council-container">
         <div class="council-card">
-            <div class="council-card">
-                <div class="council-photo"></div>
-                <div class="council-name">Name Name</div>
-                <div class="council-position">Position</div>
-                <div class="council-description">Blah</div>
-            </div>
-        </div> 
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
     </div>
-    
+
+    <!-- Commissioners and Directors -->
+    <div class="title team-title" id="council">Commissioners and Directors</div><br>
+    <div class="council-container">
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+    </div>
+
+    <!-- Committee Members -->
+    <div class="title team-title" id="council">Committee Members</div><br>
+    <div class="council-container">
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+        <div class="council-card">
+            <div class="council-photo" style="background-image: url(./img/shop/jacket2.jpg);"></div>
+            <div class="council-name">Name Name</div>
+            <div class="council-position">Position</div>
+            <div class="council-description">Blah</div>
+        </div>
+    </div>
+
+
+
     <!-- FOOTER -->
     <div class="footer">
         <a href="/" class="footer-image">
