Update test redirects

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="/"><img src="img/logo.png" class="menu-image"></a>
             <div class="menu-items">
                 <li id="menu-about">
-                    <a href="/about" class="menu-top-item">Western</a>
+                    <a href="about" class="menu-top-item">Western</a>
                     <div class="menu-dropdown" id="western-dropdown">
                         <div class="dropdown-item"><a href="/about">About Us</a></div>
                         <div class="dropdown-item"><a href="/about#culture">Culture</a></div>
@@ -33,14 +33,14 @@
                     </div>
                 </li>
                 <li id="menu-join">
-                    <a href="/join" class="menu-top-item">Join Us</a>
+                    <a href="join" class="menu-top-item">Join Us</a>
                     <div class="menu-dropdown" id="join-dropdown">
                         <div class="dropdown-item"><a href="/clubs">Clubs</a></div>
                         <div class="dropdown-item"><a href="">Conferences</a></div>
                         <div class="dropdown-item"><a href="">Events</a></div>
-                        <div class="dropdown-item"><a href="">Wellness Committee</a></div>
-                        <div class="dropdown-item"><a href="">Sustainability Committee</a></div>
-                        <div class="dropdown-item"><a href="">Discord Committee</a></div>
+                        <div class="dropdown-item"><a href="wellness">Wellness Committee</a></div>
+                        <div class="dropdown-item"><a href="environment">Sustainability Committee</a></div>
+                        <div class="dropdown-item"><a href="https://discord.gg/b8EfQSKKbK">Discord Committee</a></div>
                         <div class="dropdown-item menu-bottom-item"><a href="">Blogs</a></div>
                     </div>
                 </li>
@@ -53,7 +53,7 @@
                     </div>
                 </li>
                 <li id="menu-admin">
-                    <a href="/admin" class="menu-top-item">Admin</a>
+                    <a href="admin" class="menu-top-item">Admin</a>
                     <div class="menu-dropdown" id="admin-dropdown">
                         <div class="dropdown-item"><a href="/team">Council Resources</a></div>
                         <div class="dropdown-item"><a href="/team">Exec Updates</a></div>
@@ -62,7 +62,7 @@
                         <div class="dropdown-item menu-bottom-item"><a href="">SRA</a></div>
                 </li>
                 <li id="menu-store">
-                    <a href="/store" class="menu-top-item">Eng Merch</a>
+                    <a href="store" class="menu-top-item">Eng Merch</a>
                     <div class="menu-dropdown" id="store-dropdown">
                         <div class="dropdown-item"><a href="/shop">+/- Store</a></div>
                         <div class="dropdown-item"><a href="/jacket">Boilersuits</a></div>
