--- a/join.html
+++ b/join.html
@@ -164,7 +164,7 @@
 
     <!-- SIGN UP FOR NOTIFICATIONS-->
     Sign up to be notified for UES updates and applications!
-    TBD
+    <br> <stron>Coming Soon!</stron> Join our <a href="/discord">Discord</a> to receive any updates!
 
     <!-- GET INVOLVED -->
     <div class="conferences-container">
@@ -248,7 +248,7 @@
 
     <!-- BLOG -->
     <div class="blog-container" id="blog">
-        <div class="blog-title">UES Blog</div>
+        <div class="title blog-title">UES Blog</div>
             
         <div></div>
     </div>
