--- a/team.html
+++ b/team.html
@@ -160,6 +160,11 @@
 
 
     <!-- TEAMS -->
+
+    <div class="team-intro"> 
+        <div></div>
+    </div>
+
     <!-- EXEC TEAM -->
     <div class="title team-title" id="exec">Executive Team</div><br>
     <div class="team-container">
