update fixed redirect index

--- a/about.html
+++ b/about.html
@@ -323,12 +323,12 @@
     <hr class="line-break">
 
     <!-- CONTACT US -->
+    <div class="title contact-us-title">Contact Us</div>
     <div class="contact-us">
-        <div class="title">Contact Us</div>
 
         <!-- GOOGLE MAP -->
-        <div class="ues-map">
-            <iframe height="350" id="gmap_canvas"
+        <div >
+            <iframe class="ues-map" height="350" id="gmap_canvas"
                 src="https://maps.google.com/maps?q=1001%20The%20University%20of%20Western%20Ontario%20London,%20Ontario,%20Canada,%20N6A%205B9&t=&z=13&ie=UTF8&iwloc=&output=embed"
                 frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
             </iframe>
@@ -361,10 +361,10 @@
         </div>
 
         <div class="footer-socials">
-            <a href="snapchat.com/add/westernues"><img src="img/disc.png" height=20px></a>
+            <a href="https://discord.gg/b8EfQSKKbK"><img src="img/disc.png" height=20px></a>
             <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
             <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
-            <a href="snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+            <a href="https://snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
         </div>
     </div>
 
