--- a/jacket.html
+++ b/jacket.html
@@ -209,7 +209,7 @@
                     <img class="jacket-gallery-photo initial" src="./img/shop/jacket.jpg">
                     <img class="jacket-gallery-photo" src="./img/front2.jpg">
                     <img class="jacket-gallery-photo" src="./img/front3.jpg">
-    
+
                     <div class="jacket-gallery-button--next"></div>
                     <div class="jacket-gallery-button--prev"></div>
                 </div>
@@ -257,25 +257,26 @@
 
     </div>
 
+    <!-- FOOTER -->
+    <div class="footer">
+        <a href="/" class="footer-image">
+            <img src="./img/logo_white.png" height="30px">
+            <span style="margin-left:10px;">Western UES</span>
+        </a>
+        <div class="footer-text">
+            © 2021 Western UES
+        </div>
+
+        <div class="footer-socials">
+            <a href="https://discord.gg/b8EfQSKKbK"><img src="img/disc.png" height=20px></a>
+            <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
+            <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
+            <a href="https://snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+        </div>
+    </div>
+
+    <script src="./js/script.js"></script>
+
 </body>
-<!-- FOOTER -->
-<div class="footer">
-    <a href="/" class="footer-image">
-        <img src="./img/logo_white.png" height="30px">
-        <span style="margin-left:10px;">Western UES</span>
-    </a>
-    <div class="footer-text">
-        © 2021 Western UES
-    </div>
-
-    <div class="footer-socials">
-        <a href="snapchat.com/add/westernues"><img src="img/disc.png" height=20px></a>
-        <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
-        <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
-        <a href="snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
-    </div>
-</div>
-
-<script src="./js/script.js"></script>
 
 </html>
