--- a/join.html
+++ b/join.html
@@ -95,7 +95,7 @@
         </div>
         <ol>
             <div class="mobile-menu-items" id="menu-mobile">
-                
+
                 <li class="mobile-menu-item">
                     <a class="mobile-menu-top-item">Western</a>
                     <div class="mobile-menu-dropdown">
@@ -164,7 +164,8 @@
 
     <!-- SIGN UP FOR NOTIFICATIONS-->
     Sign up to be notified for UES updates and applications!
-    <br> <stron>Coming Soon!</stron> Join our <a href="/discord">Discord</a> to receive any updates!
+    <br>
+    <stron>Coming Soon!</stron> Join our <a href="/discord">Discord</a> to receive any updates!
 
     <!-- GET INVOLVED -->
     <div class="conferences-container">
@@ -192,7 +193,8 @@
                         communicate with professional associations, academia, industry and government on behalf of
                         member
                         schools, but never to:
-                        <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. Align with partisan organizations; or <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. Become involved in issues not directly
+                        <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. Align with partisan organizations; or
+                        <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. Become involved in issues not directly
                         related
                         to
                         engineering education and practice;
@@ -249,10 +251,15 @@
     <!-- BLOG -->
     <div class="blog-container" id="blog">
         <div class="title blog-title">UES Blog</div>
-            
-        <div></div>
-    </div>
 
+        <div class="blogs-wrapper">
+            <div class="blog-post">
+                <div class="blog-post-image"></div>
+                <div class="blog-post-title"></div>
+                <div class="blog-post-summary"></div>
+            </div>
+        </div>
+    </div>
 
     <!-- FOOTER -->
     <div class="footer">
@@ -265,10 +272,10 @@
         </div>
 
         <div class="footer-socials">
-            <a href="snapchat.com/add/westernues"><img src="img/disc.png" height=20px></a>
+            <a href="https://discord.gg/b8EfQSKKbK"><img src="img/disc.png" height=20px></a>
             <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
             <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
-            <a href="snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+            <a href="https://snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
         </div>
     </div>
 
