--- a/action.html
+++ b/action.html
@@ -22,7 +22,7 @@
     <!-- MENU -->
     <div class="menu-container">
         <ol>
-            <a href="/"><img src="img/logo.png" class="menu-image"></a>
+            <a href=""><img src="img/logo.png" class="menu-image"></a>
             <div class="menu-items">
                 <li id="menu-about">
                     <a href="/about" class="menu-top-item">Western</a>
@@ -35,7 +35,7 @@
                 <li id="menu-join">
                     <a href="/join" class="menu-top-item">Join Us</a>
                     <div class="menu-dropdown" id="join-dropdown">
-                        <div class="dropdown-item"><a href="/clubs">Clubs</a></div>
+                        <div class="dropdown-item"><a href="clubs.html">Clubs</a></div>
                         <div class="dropdown-item"><a href="">Conferences</a></div>
                         <div class="dropdown-item"><a href="">Events</a></div>
                         <div class="dropdown-item"><a href="">Wellness Committee</a></div>
@@ -47,7 +47,7 @@
                 <li id="menu-council">
                     <a href="/team" class="menu-top-item">Council</a>
                     <div class="menu-dropdown" id="council-dropdown">
-                        <div class="dropdown-item"><a href="/team">Operations</a></div>
+                        <div class="dropdown-item"><a href="team">Operations</a></div>
                         <div class="dropdown-item"><a href="/team">Our Team</a></div>
                         <div class="dropdown-item menu-bottom-item"><a href="">Elections</a></div>
                     </div>
@@ -158,7 +158,15 @@
         </ol>
     </div>
 
-    <!--  -->
+    <!-- RANDOM BACKGROUND SHAPES -->
+    <img src="./img/Blob4.svg" class="background-blob1">
+    <img src="./img/Blob3.svg" class="background-blob2">
+
+    <!-- EDI ACTION PLAN -->
+    <div class="edi-container">
+        <div class="title edi-title"> Equity, Diversity & Inclusion (EDI) Action Plan</div>
+    </div>
+
 
 
     <!-- FOOTER -->
@@ -172,10 +180,10 @@
         </div>
 
         <div class="footer-socials">
-            <a href="snapchat.com/add/westernues"><img src="img/disc.png" height=20px></a>
+            <a href="https://discord.gg/b8EfQSKKbK"><img src="img/disc.png" height=20px></a>
             <a href="https://www.instagram.com/westernues/?hl=en"><img src="img/ig.png" height=20px></a>
             <a href="https://www.facebook.com/westernues/"><img src="img/fb.png" height=20px></a>
-            <a href="snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
+            <a href="https://snapchat.com/add/westernues"><img src="img/sc.png" height=20px></a>
         </div>
     </div>
 
@@ -183,4 +191,4 @@
 
 </body>
 
-</htm
+</html>
